# RemX

./: .gitignore  README.md  pyproject.toml  setup.py
cli/pm/: README.md  __init__.py  pyproject.toml
docs/: ARCHITECTURE-ANALYSIS.md  CLI-TEST-PLAN.md  PR-DESCRIPTION.md  REFACTOR-v0.3.0.md  SKILL-REFACTOR-PLAN.md  SKILL-TEST-PLAN.md  adr-001-technical-architecture.md  design-v2.md  design.md  explorer-report.md  memory-writing-guide.md  pm-cli-user-guide.md  remx-cli-user-guide.md  review-deep.md  review-fresh.md  review-phase1.md  review.md  tech-spec.md  test-cases.md  test-deep.md  test-fresh.md  test-phase1.md  verify-fresh.md
pm/: __init__.py  __main__.py  chunker.py  cli.py  gc_.py  index_.py  init_.py  parse.py  pyproject.toml  retrieve_.py  schema.py
remx/: __init__.py  __main__.py  chunker.py  cli.py  config.py  db.py  embedding.py  gc.py  gc_.py  idgen.py  index_.py  init_.py  openclaw.plugin.json  package.json  parse.py  pyproject.toml  retrieve_.py  schema.py  setup.py  storage.py
remx-cli/src/remx/: cli.py
remx-cli/tests/: conftest.py  test_db.py
remx-core/: package.json
remx-core/src/: index.ts
remx-core/src/commands/: gc.ts  init.ts  relate.ts  retrieve.ts
remx-core/src/core/: db.ts  index.ts
remx-core/src/memory/: crud.ts  graph.ts  memory.ts  recall.ts  topology.ts
remx-core/src/runtime/: db.ts  triple-store.ts
remx-core/tests/: graph.test.ts  topology.test.ts  triple-store.test.ts
remx-skill/: SKILL.md
remx-skill/references/: memory-writing-guide.md  remx-cli-user-guide.md
remx/commands/: __init__.py  add.py  gc.py  index.py  init.py
remx/core/: db.py  schema.py
skills/project-manager/: SKILL.md
skills/remx-skill/: SKILL.md
tests/: conftest.py  test_db.py
(+11 files in other folders)
