[project]
name = "pm"
version = "0.1.0"
description = "Project-Manager CLI"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "pyyaml>=6.0",
    "sqlite-vec>=0.1.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
]

[project.scripts]
remx = "remx:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pm*"]
